--- a/package.json
+++ b/package.json
@@ -1,5 +1,23 @@
 {
   "dependencies": {
+    "webpack": "^4.46.0",
     "webpack-cli": "^4.7.0"
-  }
+  },
+  "name": "lecture-frontend-dev-env",
+  "description": "\"프론트엔드 개발 환경의 이해\" 강의 자료입니다.",
+  "version": "1.0.0",
+  "main": "webpack.config.js",
+  "scripts": {
+    "build": "webpack"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/switch-coder/front-dev-env.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/switch-coder/front-dev-env/issues"
+  },
+  "homepage": "https://github.com/switch-coder/front-dev-env#readme"
 }
