--- a/package.json
+++ b/package.json
@@ -33,5 +33,9 @@
     "url": "https://github.com/jeonghwan-kim/lecture-frontend-dev-env/issues"
   },
   "homepage": "https://github.com/jeonghwan-kim/lecture-frontend-dev-env#readme",
-  "dependencies": {}
+  "dependencies": {
+    "node": "14.16",
+    "node-sass": "4.14",
+    "sass-loader": "^10.2.0"
+  }
 }
