--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "homepage": "https://github.com/jeonghwan-kim/lecture-frontend-dev-env#readme",
   "dependencies": {
-    "axios": "^0.19.1"
+    "axios": "^0.19.1",
+    "semver": "^5.7.1"
   }
 }
